# El-Caura-Terra

./: CMakeLists.txt  README.md  el-caura-terra.ino
.cache/clangd/index/: main.cpp.7244E62F2F0079DD.idx  terra.h.A2BF934C92F2E53D.idx
arduino/: ASensorController.cpp  ASensorController.h  ASensorsController.cpp  ASensorsController.h  main.ino
emu/: ESensorController.h  main.cpp
main/: CalendarEntry.hpp  CalendarJsonFormatter.hpp  JsonFormatter.hpp  RTCController.cpp  RTCController.h  RelayController.cpp  RelayController.h  SensorsController.cpp  SensorsController.h  WebServer.cpp  WebServer.h  main.ino  wifi_test.ino
main/html/: index.h
src/: Calendar.cpp  Calendar.h  CalendarJsonFormatter.hpp  ClockJsonFormatter.hpp  RTCController.cpp  SensorsController.cpp  SensorsJsonFormatter.hpp  WebServer.cpp  WebServer.h  WebSettings.h  main.ino
src/html/: 404.h  index.h
terra/: Calendar.cpp  Calendar.h  CalendarEntry.hpp  CalendarJsonFormatter.hpp  JsonFormatter.hpp  RTCController.cpp  RTCController.h  RelayController.cpp  RelayController.h  SensorController.hpp  SensorsJsonFormatter.hpp  WebServer.cpp  WebServer.h  WebSettings.h  terra.h
terra/html/: 404.h
